# GPGPUTasks2021

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
.githooks/: readme.md
.github/: pull_request_example.md
.github/workflows/: auto_approve.yml  auto_approve_pr.yml  cmake.yml
.travis/: install_cuda.sh
libs/: CMakeLists.txt
libs/gpu/libgpu/cuda/cu/: opencl_translator.cu
libs/gpu/libgpu/opencl/: engine.cpp
src/: main.cpp  main_aplusb.cpp  main_bitonic.cpp  main_mandelbrot.cpp  main_matrix_multiplication.cpp  main_matrix_transpose.cpp  main_max_prefix_sum.cpp  main_merge.cpp  main_radix.cpp  main_sum.cpp
src/cl/: aplusb.cl  bitonic.cl  mandelbrot.cl  matrix_multiplication.cl  matrix_transpose.cl  max_prefix_sum.cl  merge.cl  radix.cl  sum.cl
src/cu/: aplusb.cu
